<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/quizOptionsFragment">

    <fragment
        android:id="@+id/quizOptionsFragment"
        android:name="com.example.triviaapp.ui.fragment.QuizOptionsFragment"
        tools:layout="@layout/fragment_quiz_options">
        <action
            android:id="@+id/action_quizOptionsFragment_to_quizFragment"
            app:destination="@+id/quizFragment"/>
    </fragment>

    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.triviaapp.ui.fragment.QuizFragment"
        tools:layout="@layout/fragment_quiz">
        <action
            android:id="@+id/action_quizFragment_to_resultFragment"
            app:destination="@+id/resultFragment"/>
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.triviaapp.ui.fragment.ResultFragment"
        tools:layout="@layout/fragment_quiz_result">
        <action
            android:id="@+id/action_resultFragment_to_quizOptionsFragment"
            app:destination="@id/quizOptionsFragment"/>
    </fragment>
</navigation>