...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
            app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/textview_question_type_header" />

        <Button
            android:id="@+id/start_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/button_quiz_options"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
...
